src/calm/NKP/bootcamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: <yourname>-landon-master  # Edit with yourname
  name: <yourname>-landon-master  # Edit with yourname
  namespace: <yourname>-project-laravel-xxxxxx  # Edit with yourname and correct namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: <yourname>-landon-master   # Edit with yourname
  template:
    metadata:
      labels:
        k8s-app: <yourname>-landon-master   # Edit with yourname
      name: <yourname>-landon-master   # Edit with yourname
    spec:
      containers:
        - image: <your harbor IP address>:5000/library/<yourname>_laravel_master:v1.0.0-xxxxxxx   # Edit with harbor IP, yourname image with exact unique tag -- use harbor artifact copy to make sure
          name: <yourname>-landon-master  # Edit with yourname
          resources: {}
      imagePullSecrets:
        - name: harbor-registry-credentials
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8s-app: <yourname>-landon-master  # Edit with yourname
  name: <yourname>-landon-master  # Edit with yourname
  namespace: <yourname>-project-laravel-xxxxxx  # Edit with yourname and correct namespace
spec:
  ports:
    - name: tcp-9999-master
      port: 9999
      protocol: TCP
      targetPort: 9999
  selector:
    k8s-app: <yourname>-landon-master   # Edit with yourname
  type: LoadBalancer
