src/calm/NKP/bootcamp/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: <yourname>-wordpress-mysql      
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <yourname>-wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - image: <harbor_ip_address>:5000/proxy_cache/mysql:8.0
          name: <yourname>-mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: <yourname>-mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: <yourname>-mysql-persistent-storage     
          persistentVolumeClaim:
            claimName: <yourname>-mysql-pv-claim         
      imagePullSecrets:
        - name: harbor-registry-credentials
