src/calm/NKP/bootcamp/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: <yourname>-wordpress     
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <yourname>-wordpress            
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: <harbor_ip_address>:5000/proxy_cache/wordpress:apache 
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: <yourname>-wordpress-persistent-storage  
          mountPath: /var/www/html
      volumes:
      - name: <yourname>-wordpress-persistent-storage         
        persistentVolumeClaim:
          claimName: <yourname>-wp-pv-claim-nfs
      imagePullSecrets:
        - name: harbor-registry-credentials
